# next-home

./: .gitignore  .npmrc  IMPLEMENTATION_REPORT.md  LICENSE  Makefile  README.md  api.py  package.json  pnpm-workspace.yaml  pyproject.toml  tailwind.config.js  test_mcp_server.py
apps/api-server/bl1nk-architect/: .dockerignore  .env.example  .gitignore  ATTACHMENT_GUIDE.md  COMPLETE_DOCUMENTATION.md  Dockerfile  Dockerfile.dashboard  GITHUB_ACTIONS_SETUP.md  HEALTH_CHECK_GUIDE.md  INDEX.md  INTRODUCTION_GUIDE.md  PROJECT_DELIVERY.md  PROJECT_SUMMARY.md  QUICKSTART.md  README.md  SKILL_SYSTEM_API.md  SKILL_SYSTEM_GUIDE.md  SMITHERY_CHATGPT_APP.md  STRUCTURE.md  check_dependencies.py  dashboard.py  docker-compose.yml  health_check.py  modal_app.py  pyproject.toml
apps/api-server/bl1nk-architect/.devcontainer/: devcontainer.json  setup.sh
apps/api-server/bl1nk-architect/.github/workflows/: code-quality.yml  deploy.yml  docker-build.yml  release.yml  security-scan.yml  test.yml
apps/api-server/bl1nk-architect/scripts/: docker-dev.sh  setup.sh  start.sh
apps/api-server/bl1nk-architect/smithery-poe-bot/: README.md
apps/api-server/bl1nk-architect/src/: __init__.py  attachment_handler.py  auth.py  bot.py  bot_with_skills.py  gemini_client.py  github_client.py  health_check.py  health_check_api.py  introduction_manager.py  orchestrator.py  orchestrator_v2.py  orchestrator_with_attachments.py  poe_plugin_manager.py  skill_loader.py
apps/api-server/bl1nk-architect/src/notifications/: __init__.py  clickup_notifier.py  linear_notifier.py  (+2 more)
apps/api-server/bl1nk-architect/tests/: test_auth.py  test_bot.py  test_orchestrator.py
apps/api-server/bl1nk-architect/utils/: __init__.py  formatter.py
(+142 files in other folders)
